[project]
name = "dagster_csodata"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.18",
    "dagster-dbt>=0.28.18",
    "dagster-dlt>=0.28.18",
    "dlt[gs]>=1.23.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pyjstat>=2.4.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_csodata"
registry_modules = [
    "dagster_csodata.components.*",
]


